[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Board.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Hand.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/Tahoma.tres" type="DynamicFont" id=4]

[node name="Game" type="Node2D"]
position = Vector2( 0, 2 )
script = ExtResource( 1 )

[node name="Board" parent="." instance=ExtResource( 2 )]
position = Vector2( 960, 450 )

[node name="Hand" parent="." instance=ExtResource( 3 )]
position = Vector2( 960, 1000 )

[node name="Player_Resources" type="Node" parent="."]

[node name="Top Label" type="RichTextLabel" parent="Player_Resources"]
margin_left = 21.0
margin_top = 29.093
margin_right = 408.0
margin_bottom = 84.093
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Your resources:"

[node name="A_Label" type="RichTextLabel" parent="Player_Resources"]
margin_left = 21.0
margin_top = 104.05
margin_right = 408.0
margin_bottom = 159.05
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "A:"

[node name="G_Label" type="RichTextLabel" parent="Player_Resources"]
margin_left = 21.0
margin_top = 158.329
margin_right = 408.0
margin_bottom = 213.329
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "G:"

[node name="Opponent_Resources" type="Node" parent="."]

[node name="Top Label" type="RichTextLabel" parent="Opponent_Resources"]
margin_left = 1497.98
margin_top = 29.0
margin_right = 1926.98
margin_bottom = 84.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Opponent's resources:"

[node name="A_Label" type="RichTextLabel" parent="Opponent_Resources"]
margin_left = 1498.41
margin_top = 104.05
margin_right = 1885.41
margin_bottom = 159.05
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "A:"

[node name="G_Label" type="RichTextLabel" parent="Opponent_Resources"]
margin_left = 1498.41
margin_top = 158.329
margin_right = 1885.41
margin_bottom = 213.329
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "G:"
[connection signal="card_drop" from="Board" to="." method="_on_Board_card_drop"]
[connection signal="card_move" from="Board" to="." method="_on_Board_card_move"]
[connection signal="hover" from="Board" to="." method="_on_Board_hover"]
[connection signal="unhover" from="Board" to="." method="_on_Board_unhover"]
[connection signal="drop" from="Hand" to="." method="_on_Hand_drop"]
[connection signal="play" from="Hand" to="." method="_on_Hand_play"]
